--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class=" m-auto d-flex  login rounded-5 col-xl-6 ">
         <div class="d-inline-flex justify-content-center align-items-center">
-          <img class="cadeado col-md-6 w-100 h-50" src="../static/img/iconLogin.png" alt="cadeado">
+          <img class="cadeado col-md-6 w-100 h-50" src="/static/img/iconLogin.png" alt="cadeado">
         </div>
              
         <form action="#" method="GET" class="col-md-8 text-white p-5 ">
