--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/responsivo.css">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/responsivo.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
@@ -14,7 +14,7 @@
 
     <div class=" m-auto d-flex  login rounded-5 col-xl-6 ">
         <div class="d-inline-flex justify-content-center align-items-center">
-          <img class="cadeado col-md-6 w-100 h-50" src="/static/img/iconLogin.png" alt="cadeado">
+          <img class="cadeado col-md-6 w-100 h-50" src="static/img/iconLogin.png" alt="cadeado">
         </div>
              
         <form action="#" method="GET" class="col-md-8 text-white p-5 ">
