correções nos inputs

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <form action="#" method="GET" class="col-md-8 text-white p-5 ">
             <div class="mb-3">
               <label class="form-label">Usuário</label>
-              <input type="email" class="form-control" id="user" aria-describedby="emailHelp" required>
+              <input type="text" class="form-control" id="user" required>
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <label class="form-label">Senha</label>
+              <input type="password" class="form-control" id="senha" required>
             </div>
             <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">esqueceu a senha</label>
+              <input type="checkbox" class="form-check-input" id="remember-senha">
+              <label class="form-check-label">esqueceu a senha</label>
             </div>
             <button type="submit" class="btn btn-primary w-100">Entrar</button>
           </form>
