tela menuAdm mobile e desktop

--- a/tamplates/menu.html
+++ b/tamplates/menu.html
@@ -10,7 +10,7 @@
    
     <title>Managment Login</title>
 </head>
-<body class="m-auto login background">
+<body class="m-auto login background-menu">
    <main>
     <div class=" boas-vindas justify-content-center align-content-center border w-100" >
         <div class="w-100 text-center text-white text-uppercase">
