TEla cadastro morador

--- a/tamplates/cadMorador.html
+++ b/tamplates/cadMorador.html
@@ -10,7 +10,7 @@
    
     <title>Managment Login</title>
 </head>
-<body class="m-auto login background-menu-adm">
+<body class="m-auto login background-menu-morador">
     <header>
         <div id="menu" onclick="menu()" class="icone-menu">
             <div class="traco"></div>
@@ -21,12 +21,12 @@
     <main>
             <div id="menu-mobile" class="menu-adm-mobile">
                 <div>
-                    <a href="http://">
+                    <a href="menuAdm.html">
                         <img class="icone" src="../img/iconeAdm.png" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
-                    <a href="http://">
+                    <a href="menuAdmMorador.html">
                         <img class="icone" src="../img/iconMorador.png" alt="iconeMorador">
                     </a>
                 </div>
@@ -39,12 +39,12 @@
             <div class="painel">
                 <div class="menu-adm">
                     <div>
-                        <a href="menuAdm.html">
+                        <a href="http://">
                             <img class="icone" src="../img/iconCrtlAdm.png" alt="iconeAdm">
                         </a>
                     </div>
                     <div>
-                        <a href="menuAdmMorador.html">
+                        <a href="http://">
                             <img class="icone" src="../img/iconCrtlMorador.png" alt="iconeMorador">
                         </a>
                     </div>
@@ -57,26 +57,8 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlCadMorador.png" alt="iconeAdm">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlCadFuncionario.png" alt="iconeMorador">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlLancarDocumento.png" alt="iconeAdm">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="http://">
-                                <img class="icone-menu-adm" src="../img/iconCtrlEmitirDocumento.png" alt="iconeAdm">
-                            </a>
-                        </div>
+                       
+                       
                     </div>
                 </div>
             </div>
