--- a/tamplates/menu.html
+++ b/tamplates/menu.html
@@ -20,17 +20,17 @@
         <div>
             <div class="menu">
                 <div>
-                    <a href="http://">
+                    <a href="menuAdm.html">
                         <img class="icone" src="../img/iconeAdm.png" alt="iconeAdm">
                     </a>
                 </div>
                 <div>
-                    <a href="http://">
+                    <a href="menuAdmMorador.html">
                         <img class="icone" src="../img/iconMorador.png" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
-                    <a href="http://">
+                    <a href="#">
                         <img class="icone" src="../img/iconConsAgenda.png" alt="iconeAdm">
                     </a>
                 </div>
