--- a/tamplates/atualizaMorador.html
+++ b/tamplates/atualizaMorador.html
@@ -10,7 +10,7 @@
    
     <title>Managment Login</title>
 </head>
-<body class="m-auto login background-menu-cadastro-morador">
+<body class="m-auto login background-menu-atualiza-morador">
     <header>
         <div id="menu" onclick="menu()" class="icone-menu">
             <div class="traco"></div>
@@ -27,7 +27,7 @@
                 </div>
                 <div>
                     <a href="atualizaMorador.html">
-                        <img class="icone" src="../img/iconCtrlAtulizarCadFuncionario.png" alt="iconeMorador">
+                        <img class="icone" src="../img/iconUpdateCadastro.png" alt="iconeMorador">
                     </a>
                 </div>
                 <div>
@@ -45,7 +45,7 @@
                     </div>
                     <div>
                         <a href="atualizaMorador.html">
-                            <img class="icone" src="../img/iconCtrlAtulizarCadFuncionario.png" alt="iconeMorador">
+                            <img class="icone" src="../img/iconUpdateCadastro.png" alt="iconeMorador">
                         </a>
                     </div>
                     <div>
@@ -58,32 +58,36 @@
                 <div class="container-painel">
                     <div class="painel-menu" >
                         <form>
-                          
                             <div class="mb-3">
+                                <label for="matricula" class="form-label text-white">Matricula</label>
+                                <input type="text" class="form-control" id="matricula" name = "matricula" required> 
+                                <button type="submit" class="btn btn-primary">Pesquisar</button>
+                                <br>
+
                                 <label for="name" class="form-label text-white">Nome Completo</label>
                                 <input type="text" class="form-control" id="name" name = " name" required>
-                                
+                                <br>
                                 <select name="documento" id="documento" required>
                                     <option value="">RG</option>
                                     <option value="">CPF</option>
-                                </select><label for="documento" class="form-label text-white"></label>
-                                <br>
+                                </select>
+                                <br><br>
                                 <select name="genero" id="sexo" required>
                                     <option value="">Masculino</option>
                                     <option value="">Feminino</option>
-                                </select><label for="genero" class="form-label"></label>
-                                <br>
-                                <label for="contato" class="form-label  text-white">Contato</label>
+                                </select>
+                                <br><br>
+                                <label for="contato" class="form-label text-white">Contato</label>
                                 <input type="text" class="form-control" id="contact" name="contact" required>
 
-                                <label for="veiculo" class="form-label  text-white">Veículo</label>
+                                <label for="veiculo" class="form-label text-white">Veículo</label>
                                 <br>
                                 <select name="veiculo" id="transporte">
                                     <option value="">Carro</option>
                                     <option value="">Moto</option>
                                 </select>
                                 <br>
-                                <label for="modelo" class="form-label  text-white">Modelo</label>
+                                <label for="modelo" class="form-label text-white">Modelo</label>
                                 <input type="text" class="form-control" id="modelo" name = "modelo" required>
 
                                 <label for="placa" class="form-label text-white">Placa</label>
