ajustes em campos dos formularios

--- a/tamplates/atualizaMorador.html
+++ b/tamplates/atualizaMorador.html
@@ -65,7 +65,7 @@
                                 <br>
 
                                 <label for="name" class="form-label text-white">Nome Completo</label>
-                                <input type="text" class="form-control" id="name" name = " name" required>
+                                <input type="text" class="form-control" id="name" name = " name" required pattern="[a-z]{1,20}$">
                                 <br>
                                 <select name="documento" id="documento" required>
                                     <option value="">RG</option>
