--- a/tamplates/cadMorador.html
+++ b/tamplates/cadMorador.html
@@ -61,7 +61,7 @@
                           
                             <div class="mb-3">
                                 <label for="name" class="form-label text-white">Nome Completo</label>
-                                <input type="text" class="form-control" id="name" name = " name" required>
+                                <input type="text" class="form-control" id="name" name = " name" required pattern="[a-z]{1,20}$">
                                 
                                 <select name="documento" id="documento" required>
                                     <option value="">RG</option>
