--- a/tamplates/atualizaMorador.html
+++ b/tamplates/atualizaMorador.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/responsivo.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
     <title>Managment Login</title>
@@ -57,7 +57,7 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <form>
+                        <form id="validaForms">
                             <div class="mb-3">
                                 <label for="matricula" class="form-label text-white">Matricula</label>
                                 <input type="text" class="form-control" id="matricula" name = "matricula" required> 
@@ -65,7 +65,7 @@
                                 <br>
 
                                 <label for="name" class="form-label text-white">Nome Completo</label>
-                                <input type="text" class="form-control" id="name" name = " name" required pattern="[a-z]{1,20}$">
+                                <input type="text" class="form-control" id="name" nome = " nome" required pattern="[a-z]{1,20}$">
                                 <br>
                                 <select name="documento" id="documento" required>
                                     <option value="">RG</option>
@@ -78,7 +78,7 @@
                                 </select>
                                 <br><br>
                                 <label for="contato" class="form-label text-white">Contato</label>
-                                <input type="text" class="form-control" id="contact" name="contact" required>
+                                <input type="text" class="form-control" id="contato" name="contato" required>
 
                                 <label for="veiculo" class="form-label text-white">Veículo</label>
                                 <br>
@@ -97,7 +97,7 @@
                                 <input type="text" class="form-control" id="cor" name = "cor" required>
                             </div>
                             
-                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            <button type="submit" class="btn btn-primary">Salvar</button>
                         </form>
                        
                     </div>
