--- a/tamplates/consultaMorador.html
+++ b/tamplates/consultaMorador.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/responsivo.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    
     <title>Managment Login</title>
@@ -57,10 +57,7 @@
 
                 <div class="container-painel">
                     <div class="painel-menu" >
-                        <form>
-                            <!--
-                                matricula
-                            -->
+                        <form id="validaForms">
                             <div class="mb-3">
                                 <label for="matricula" class="form-label  text-white">Matricula</label>
                                 <input type="text" class="form-control" id="matricula" name = "matricula" required> 
